--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "lib/english_unit.js",
   "directories": {
-    "lib": "lib"
+    "lib": "lib",
+    "src": "src"
   },
   "dependencies": {
     "abstract-numerical-unit": "^1.1.0"
   },
-  "devDependencies": {
-    "mocha": "^6.2.1"
-  },
+  "devDependencies": {},
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "flow": "flow",
+    "prepublish": "flow-remove-types src/ -d lib/"
   },
   "repository": {
     "type": "git",
