--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha",
+    "test": "node lib/english_unit_test.js",
     "flow": "flow",
     "prepublish": "flow-remove-types src/ -d lib/"
   },
