--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src": "src"
   },
   "dependencies": {
-    "abstract-numerical-unit": "^1.3.1"
+    "abstract-numerical-unit": "^1.4.0"
   },
   "devDependencies": {
     "flow-bin": "^0.109.0",
@@ -17,8 +17,9 @@
   },
   "scripts": {
     "build": "flow-remove-types src/ -d lib/",
-    "test": "npm run build && jasmine",
+    "test": "jasmine",
     "flow": "flow",
+    "pretest": "npm run build",
     "prepublish": "npm run build"
   },
   "repository": {
